exception handling, forcing minimum date range = window

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                     <span class="date_label">Date Range: </span><input id="date_range"/>
                 </div>
                 <div class="window_input">
-                    <span class="window_label">Rolling Window (Days): </span><input id="window" type="number" value="30"/>
+                    <span class="window_label">Rolling Window (Days): </span><input id="window" min="2" type="number" value="30"/>
                 </div>
             </div>
             <div class="row" id="second_row">
