--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
             </div>
         </div>
         <div id="chart_div"></div>
+        <div id="loading_div"></div>
 
         <script>window.jQuery || document.write('<script src="../static/ext/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script type="text/javascript" src="../static/ext/tokeninput/src/jquery.tokeninput.js"></script>
