--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,17 @@ body{
     bottom:0px;
 }
 
+#loading_div{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(100,100,100,.5)
+}
+
 .symbol_input{
     display: inline-block;
 }
